--- a/plugins/plugin-groovy/che-plugin-groovy-lang-ide/src/main/resources/org/eclipse/che/plugin/groovy/ide/GroovyLocalizationConstant.properties
+++ b/plugins/plugin-groovy/che-plugin-groovy-lang-ide/src/main/resources/org/eclipse/che/plugin/groovy/ide/GroovyLocalizationConstant.properties
@@ -10,5 +10,5 @@
 #
 
 ##### Action #####
-python.action.create.file.title = Groovy File
-python.action.create.file.description = Create Groovy File
+groovy.action.create.file.title = Groovy File
+groovy.action.create.file.description = Create Groovy File
